--- a/index.html
+++ b/index.html
@@ -21,16 +21,9 @@
 </head>
 
 <body>
-    <div style="--swiper-navigation-color: #fff; --swiper-pagination-color: #fff" class="swiper mySwiper2">
-        <div class="swiper-wrapper"></div>
-        <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div>
-    </div>
-    <div thumbsSlider="" class="swiper mySwiper">
+    <div class="swiper mySwiper">
         <div class="swiper-wrapper">
-
         </div>
-    </div>
     </div>
 
 </body>
