--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
 
 <body id="body">
     <div class="swiper mySwiper">
-        <div class="swiper-wrapper">
-        </div>
+        <div class="swiper-wrapper"></div>
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
     </div>
 
 </body>
