--- a/weapons.html
+++ b/weapons.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
     />
-    <script src="script.js" defer></script>
+    <script src="script-weapons.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 
     <script
@@ -27,8 +27,8 @@
 
   <body id="body">
     <aside>
-        <h1>V<span class="a-color">a</span>alorant</h1>
-        <a href="weapons.html"><p class="displayWeapons">Armes</p></a>
+      <h1>V<span class="a-color">a</span>alorant</h1>
+      <a href="index.html"><p class="displayAgents">Agents</p></a>
     </aside>
 
     <div class="swiper mySwiper">
