--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <body id="body">
     <aside>
-        <h1>V<span class="a-color">a</span>alorant</h1>
+        <h1>V<span class="a-color">a</span>lorant</h1>
         <a href="weapons.html"><p class="displayWeapons">Armes</p></a>
     </aside>
 
